# fastappkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CHANGELOG.md  CI_CD.md  CONTRIBUTING.md  SECURITY.md  Usage.md  index.md  requirements.txt
docs/advanced/: architecture.md  best-practices.md  extending-fastappkit.md
docs/changelog/: 0.1.0.md  0.1.9.md  0.2.0.md  0.2.1.md  0.2.2.md
docs/community/: index.md
docs/configuration/: external-app-manifest.md  index.md  project-config.md  settings.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/guides/: configuration.md  creating-apps.md  creating-projects.md  deployment.md  development-workflow.md  migrations.md
docs/overrides/: main.html
docs/reference/: api-reference.md  cli-reference.md  configuration-reference.md  manifest-reference.md
docs/stylesheets/: extra.css
docs/topics/: app-isolation.md  external-apps.md  internal-apps.md  migration-system.md  router-mounting.md
docs/troubleshooting/: common-issues.md  debugging.md
docs/usage/: full-ecosystem.md  index.md  internal-apps.md  scaffolding-only.md
fastappkit/: __init__.py  exceptions.py
fastappkit/cli/: __init__.py  app.py  core.py  main.py  migrate.py  output.py  templates.py
fastappkit/cli/templates/: .gitkeep
fastappkit/cli/templates/app/internal/: __init__.py.j2  models.py.j2
fastappkit/cli/templates/app/internal/migrations/: README.md.j2  env.py.j2
fastappkit/cli/templates/project/: .gitignore.j2  README.md.j2  env.example.j2  fastappkit.toml.j2  main.py.j2  pyproject.toml.j2
fastappkit/cli/templates/project/core/: __init__.py.j2  app.py.j2  config.py.j2  models.py.j2
fastappkit/cli/templates/project/core/db/: __init__.py.j2
fastappkit/cli/templates/project/core/db/migrations/: env.py.j2
fastappkit/conf/: __init__.py  config.py  protocol.py
fastappkit/core/: __init__.py  collision.py  entrypoint.py  kit.py  loader.py  manifest.py  metadata.py  registry.py  resolver.py  router.py  types.py
fastappkit/migrations/: __init__.py  autogen.py  context.py  order.py  preview.py  runner.py  scripts.py  version.py
fastappkit/utils/: __init__.py  errors.py  logging.py
fastappkit/validation/: __init__.py  isolation.py  manifest.py  migrations.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  app_factory.py  config_factory.py  project_factory.py
tests/integration/: __init__.py
tests/integration/test_cli/: __init__.py  test_app_commands.py  test_core_commands.py  test_main.py  test_migrate_commands.py
tests/unit/: __init__.py
tests/unit/test_core/: __init__.py  test_kit.py  test_loader.py  test_manifest.py  test_registry.py  test_router.py
tests/unit/test_migrations/: __init__.py  test_order.py  test_runner.py
tests/unit/test_validation/: __init__.py  test_isolation.py  test_manifest.py  test_migrations.py
