[tool.poetry]
name = "fastappkit"
version = "0.1.2"
description = "A toolkit for building FastAPI projects with apps - internal and external pluggable apps"
authors = ["VanyLabs <desaiparth971@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["fastapi", "apps", "plugins", "migrations", "framework", "django-like", "modular", "alembic"]
homepage = "https://github.com/vanylabs/fastappkit"
repository = "https://github.com/vanylabs/fastappkit"
documentation = "https://fastappkit.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = ">=0.104.0,<0.116.0"
sqlalchemy = ">=2.0.0,<2.1.0"
alembic = ">=1.12.0,<1.14.0"
pydantic-settings = ">=2.0.0,<3.0.0"
typer = ">=0.9.0,<0.13.0"
jinja2 = ">=3.1.0,<4.0.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0,<0.32.0"}
rich = ">=13.0.0,<14.0.0"
tomlkit = ">=0.12.0,<0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
httpx = "*"
black = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.scripts]
fastappkit = "fastappkit.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["fastappkit"]

[tool.setuptools.package-data]
fastappkit = ["cli/templates/**/*"]
