[tool.poetry]
name = "fastappkit"
version = "0.1.12"
description = "A toolkit for building FastAPI projects with apps - internal and external pluggable apps"
authors = ["VanyLabs <desaiparth971@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["fastapi", "apps", "plugins", "migrations", "framework", "django-like", "modular", "alembic"]
homepage = "https://github.com/vanylabs/fastappkit"
repository = "https://github.com/vanylabs/fastappkit"
documentation = "https://fastappkit.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
packages = [{include = "fastappkit"}]
include = [
    {path = "fastappkit/cli/templates", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = ">=0.120.0,<0.130"
sqlalchemy = ">=2.0,<3.0"
alembic = ">=1.17.2,<1.18"
pydantic-settings = ">=2.10.0,<3.0"
typer = ">=0.20.0,<0.21"
jinja2 = ">=3.1.6,<4.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39"}
rich = ">=14.0.0,<15.0"
tomlkit = ">=0.13.3,<0.14"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
httpx = "*"
black = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.scripts]
fastappkit = "fastappkit.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
